kustomize/workload-multus-mgmt/network-instance-105-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstance
metadata:
  name: multus-mgmt-105-network-instance-leaf1
  labels:
    target: leaf1
spec:
  network-instance:
  - name: multus-ipvrf-itfce-105
    type: ip-vrf
    admin-state: enable
    description: paco-multus-ipvrf-itfce-105
    interface:
    - name: ethernet-1/50.105
    - name: irb0.101
    - name: irb0.102
    vxlan-interface:
    - name: vxlan0.105
