kustomize/workload-multus-mgmt/network-instance-protocol-bgpevpn101-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: multus-mgmt-101-protocolbgpevpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-macvrf-ipvlan-101
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 101
      vxlan-interface: vxlan0.101
