kustomize/workload-multus-mgmt/network-instance-protocol-bgpevpn102-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: multus-mgmt-102-protocolbgpevpn-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-macvrf-sriov-102
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 102
      vxlan-interface: vxlan0.102
