kustomize/workload-multus-mgmt/network-instance-protocol-bgpevpn103-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: multus-mgmt-103-protocolbgpevpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-mgmtmacvrfsriov2103
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 103
      vxlan-interface: vxlan0.103
