kustomize/workload-multus-mgmt/network-instance-protocol-bgpevpn105-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: multus-mgmt-105-protocolbgpevpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-ipvrf-itfce-105
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 105
      vxlan-interface: vxlan0.105
