kustomize/workload-multus-mgmt/network-instance-protocol-bgpvpn101-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: multus-mgmt-101-protocolbgpvpn-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-mgmtmacvrfipvlan101
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:101
        import-rt: target:65002:101
