kustomize/workload-multus-mgmt/network-instance-protocol-bgpvpn103-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: multus-mgmt-103-protocolbgpvpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-macvrf-sriov-103
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:103
        import-rt: target:65002:103
