kustomize/workload-multus-mgmt/network-instance-protocol-bgpvpn105-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: multus-mgmt-105-protocolbgpvpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-mgmtipvrfitfce105
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:105
        import-rt: target:65002:105
