kustomize/workload-multus-mgmt/network-instance-protocol-linux101-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: multus-mgmt-101-protocollinux-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-mgmtmacvrfipvlan101
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
