kustomize/workload-multus-mgmt/network-instance-protocol-linux103-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: multus-mgmt-103-protocollinux-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-macvrf-sriov-103
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
