kustomize/workload-multus-mgmt/subinterface-lag2-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterfaceSubinterface
metadata:
  name: multus-mgmt-subinterface-lag2-leaf1
  labels:
    target: leaf1
spec:
  interface-name: lag2
  subinterface:
  - index: 102
    type: bridged
    admin-state: enable
    description: "paco-esi2-102-leaf1"
    vlan:
      encap:
        single-tagged:
          vlan-id: "102"
  - index: 101
    type: bridged
    admin-state: enable
    description: "paco-esi2-101-leaf1"
    vlan:
      encap:
        single-tagged:
          vlan-id: "101"
