kustomize/workload-multus-mgmt/subinterface-lag2-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterfaceSubinterface
metadata:
  name: multus-mgmt-subinterface-lag2-leaf2
  labels:
    target: leaf2
spec:
  interface-name: lag2
  subinterface:
  - index: 101
    type: bridged
    admin-state: enable
    description: "paco-esi2-101-leaf2"
    vlan:
      encap:
        single-tagged:
          vlan-id: "101"
  - index: 103
    type: bridged
    admin-state: enable
    description: "paco-esi2-103-leaf2"
    vlan:
      encap:
        single-tagged:
          vlan-id: "103"
