kustomize/workload-multus-mgmt/vxlaninterface-vxlan0-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaTunnelInterfacesTunnelInterfaceVxlanInterface
metadata:
  name: multus-mgmt-vxlaninterface-vxlan0-leaf2
  labels:
    target: leaf2
spec:
  tunnel-interface-name: vxlan0
  vxlan-interface:
  - index: 105
    type: routed
    ingress:
      vni: 105
    egress:
      source-ip: use-system-ipv4-address
  - index: 101
    type: bridged
    ingress:
      vni: 101
    egress:
      source-ip: use-system-ipv4-address
  - index: 103
    type: bridged
    ingress:
      vni: 103
    egress:
      source-ip: use-system-ipv4-address
